@@ -1,3 +1,5 @@
+- Refactor: Remove unused field canHaveCurriculumLinesOnCreation from RegistrationStateType
+
 33.1.0 (13-07-2022)
 - Improvement: Add new profession types
 
